--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,18 @@
           <div class="site">
             <div class="header">
               <h1 class="title">{{ site.name }}</h1>
-              <a class="extra" href="/">home</a> 
-              <a class="extra" href="/">blog</a> 
-              <a class="extra" href="/">about</a>
+              <div id="extras">
+                <a class="extra" href="/">home</a> - 
+                <a class="extra" href="/blog.html">blog</a> - 
+                <a id="rightmost" href="/about.html">about</a>
+              </div>
             </div>
             <hr />
+            <div id="content">
 
                 {{ content }}
 
+            </div>
               <div class="footer">
                 <hr />
                 tom(at)tomladendorf.com
