--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,7 @@
             </div>
               <div class="footer">
                 <hr />
-                tom(at)tomladendorf.com
-                <br />
-                <a href="http://github.com/tladendo">Github</a>
+                tom at tomladendorf.com
               </div>
           </div>
         </div> <!-- /container -->
