--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
               <h1 class="title">{{ site.name }}</h1>
               <div id="extras">
                 <a class="extra" href="/">home</a> - 
-                <a class="extra" href="/blog.html">blog</a> - 
+                <a class="extra" href="/blog.html">blog</a>
               </div>
             </div>
             <hr />
